[package]
name = "broker"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "broker"
path = "src/main.rs"

[dependencies]
broker_proto = { path = "../broker_proto" }
rpcutil = { path = "../rpcutil" }
settings = { path = "../settings" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0", features = ["tls"] }
tracing = "0"

