[package]
name = "broker_client"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
broker_proto = { path = "../broker_proto" }
rpcutil = { path = "../rpcutil" }
settings = { path = "../settings" }

anyhow = "1"
http = "1"
mockall = "0"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0", features = ["tls-ring"] }
tracing = "0"
