[package]
name = "cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cli_settings = { path = "../cli_settings" }
crypto = { path = "../crypto" }
settings = { path = "../settings" }
sink_settings = { path = "../sink_settings" }
source_settings = { path = "../source_settings" }
source_proto = { path = "../source_proto" }
storage = { path = "../storage" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tonic = { version = "0", features = ["tls-ring"] }
tracing = "0"
