[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
data_proto = { path = "../data_proto" }

anyhow = "1"
bytes = "1"
hex = "0"
prost = "0.13"
ring = "0"
serde = {version = "1", features = ["derive"]}
thiserror = "2"
toml = "0"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "benchmark"
harness = false
