[package]
name = "platform"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
anyhow = "1"
tempfile = "3"
thiserror = "2"
tracing = "0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]}
windows-core = "0"

[target.'cfg(unix)'.dependencies]
libc = "0"
errno = "0"

[dev-dependencies]
test-log = { version = "0", features = ["trace", "color"] }

