[package]
name = "settings"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
platform = { path = "../platform" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tonic = { version = "0", features = ["tls"] }
tracing = "0"
tracing-subscriber = "0"
tracing-flame = "0"
thiserror = "2"
toml = "0"

[dev-dependencies]
tempfile = "3"
