[package]
name = "sink_client"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
settings = {path = "../settings"}
sink_proto = { path = "../sink_proto" }

anyhow = "1"
mockall = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0", features = ["tls-ring"] }
