[package]
name = "testcerts"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings = {path = "../settings"}
tonic = { version = "0", features = ["tls-ring"] }
